--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,65 @@
 body {
-  background: skyblue;
+  background: lightyellow;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.container {
+  margin: 120px auto;
+  max-width: 600px;
+}
+
+h1 {
+  text-align: center;
+  font-weight: 800;
+  font-size: 36px;
+  color: navy;
+  line-height: 1.5;
+}
+
+form {
+  padding: 30px;
+  background-color: white;
+  border-radius: 10px;
+  box-shadow: 3px 5px 3px rgba(128, 128, 128, 0.1);
+  display: flex;
+  margin-bottom: 30px;
+}
+
+.instructions {
+  width: 80%;
+  padding: 10px;
+  font-size: 16px;
+  color: grey;
+  border: 1px solid rgba(25, 31, 52, 0.3);
+  border-radius: 50px;
+}
+
+.submit-button {
+  width: 150px;
+  margin-left: 10px;
+  background-color: #002966;
+  color: white;
+  border-radius: 50px;
+  padding: 15px 20px;
+  font-size: 16px;
+  border: none;
+}
+
+.poem {
+  font-size: 16px;
+  line-height: 2;
+  background-color: white;
+  padding: 10px;
+  box-shadow: 3px 5px 3px rgba(128, 128, 128, 0.1);
+  border-left: 3px solid #002966;
+}
+
+footer {
+  font-size: 13px;
+
+  padding: 20px 0;
+}
+
+a {
+  color: #000080;
 }
