--- a/css/style.css
+++ b/css/style.css
@@ -16,13 +16,23 @@ h1 {
   line-height: 1.5;
 }
 
-form {
-  padding: 30px;
+.form-container {
+  margin-bottom: 30px;
+  padding: 20px;
   background-color: white;
   border-radius: 10px;
   box-shadow: 3px 5px 3px rgba(128, 128, 128, 0.1);
+}
+
+form {
   display: flex;
-  margin-bottom: 30px;
+}
+
+.example {
+  line-height: 1.5;
+  font-size: 12px;
+  opacity: 0.6;
+  margin-top: 5px;
 }
 
 .instructions {
@@ -57,6 +67,11 @@ form {
 .poem strong {
   color: #002966;
 }
+
+.hidden {
+  display: none;
+}
+
 footer {
   font-size: 13px;
 
@@ -65,4 +80,14 @@ footer {
 
 a {
   color: #000080;
+}
+
+.blink {
+  animation: blink-animation 1s steps(5, start) infinite;
+  -webkit-animation: blink-animation 1s steps(5, start) infinite;
+}
+@keyframes blink-animation {
+  to {
+    visibility: hidden;
+  }
 }
